--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "@coreui/coreui-free-react-admin-template",
-  "version": "2.0.3",
-  "description": "CoreUI React Open Source Bootstrap 4 Admin Template",
-  "author": "Łukasz Holeczek",
-  "homepage": "https://coreui.io",
-  "copyright": "Copyright 2018 creativeLabs Łukasz Holeczek",
+  "name": "flightgo",
+  "version": "1.0.0",
+  "description": "",
+  "author": "flightgo",
+  "homepage": "https://flightgoweb.herokuapp.com/",
+  "copyright": "Copyright 2018",
   "license": "MIT",
   "private": true,
   "repository": {
@@ -33,25 +33,33 @@
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^16.3.2",
     "reactstrap": "^6.0.1",
-    "simple-line-icons": "^2.4.1"
+    "simple-line-icons": "^2.4.1",
+    "axios": "^0.18.0",
+    "bcrypt": "^1.0.3",
+    "bluebird": "^3.5.1",
+    "body-parser": "^1.18.2",
+    "express": "^4.16.2",
+    "mongoose": "^5.0.9",
+    "morgan": "^1.9.0",
+    "node-fetch": "^2.1.1",
+    "@line/bot-sdk": "^6.0.2"
   },
   "devDependencies": {
     "babel-jest": "^22.4.4",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.2",
-    "react-scripts": "^1.1.4"
+    "react-scripts": "^1.1.4",
+    "popper.js": "^1.12.9"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./node_modules ./src/scss -o ./src/scss --watch --recursive",
     "start-js": "react-scripts start",
-    "start": "npm-run-all -p watch-css start-js",
+    "start": "node ./bin/www",
     "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
+    "build-r": "npm-run-all build-css build-js",
+    "build": "build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
-  },
-  "bugs": {
-    "url": "https://github.com/coreui/coreui-free-react-admin-template/issues"
   }
 }
